--- a/src/locales/es_PR.json
+++ b/src/locales/es_PR.json
@@ -1,7 +1,7 @@
 {
   "_display_name": "Español (PR)",
   "about": {
-    "description": "Esta aplicación {{applicationName}} está disponible gracias a {{healthAuthorityName}}",
+    "description": "Esta aplicación {{applicationName}} está disponible gracias al {{healthAuthorityName}}",
     "operating_system_abbr": "OS:",
     "version": "Versión:"
   },
@@ -55,13 +55,13 @@
   "covid_recommendation": {
     "find_a_test_center": "Encuentre un centro de pruebas",
     "for_more_information": "Para obtener más información sobre cómo prevenir la transmisión de la enfermedad a otras personas, consulte la guía de los CDC sobre qué hacer cuando está enfermo:",
-    "from_others_at": "de los demás en todo momento y",
+    "from_others_at": "de los demás en todo momento y ",
     "get_a_covid_test": "Hágase una prueba de COVID-19:",
     "get_rest_and_stay": "Descansa y mantente hidratado. Para obtener más información sobre cómo prevenir la transmisión de la enfermedad a otras personas, consulte la guía de los CDC sobre qué hacer cuando está enfermo:",
     "includeing_people": "incluidas las personas de su hogar.",
-    "maintain_at_least": "Mantenga al menos 6 pies de distancia",
+    "maintain_at_least": "Mantenga al menos 6 pies de distancia ",
     "monitor_for_fever": "Controle la fiebre, tos u otros síntomas de COVID-19:",
-    "physically_separate": "Separarse físicamente de los demás,",
+    "physically_separate": "Separarse físicamente de los demás, ",
     "review_cdc_guidance": "Orientación de los CDC",
     "review_symptoms": "Revise los síntomas de los CDC",
     "stay_home_except_to_get_medical_care": "Quédese en casa excepto para recibir atención médica.",
@@ -89,7 +89,7 @@
     "start": {
       "body": "Si el resultado de su prueba para COVID-19 fue positivo (no a través de una prueba de anticuerpos), puede informar sobre la prueba de forma anónima.\n\nInformar sobre su prueba ayudará a otros en su comunidad a contener la propagación del virus.",
       "header": "Informar sobre una prueba positiva",
-      "what_is_a_verification_code": "¿Qué es el código de verificación?"
+      "what_is_a_verification_code": "¿Qué es un código de verificación?"
     },
     "user_details_form": {
       "phone_number": "Número de teléfono",
@@ -113,7 +113,7 @@
     "enable_exposure_notifications_body": "Debe activar las notificaciones de exposición para informar de un resultado positivo.",
     "enable_exposure_notifications_button": "Habilitar Notificaciones de Exposición",
     "enable_exposure_notifications_title": "Active las notificaciones de exposición para continuar",
-    "enter_verification_code": "Introduzca el código de verificación",
+    "enter_verification_code": "Escribir código de verificación",
     "error": {
       "invalid_code": "Intentar con otro código",
       "invalid_format": "Los códigos pueden contener solo números y letras",
@@ -122,10 +122,10 @@
       "verification_code_used": "El código de verificación ya fue usado"
     },
     "intro": {
-      "body1": "Si ha recibido un código de verificación de {{healthAuthorityName}} por un resultado positivo a la prueba de COVID-19, envíe este código en la pantalla siguiente.",
-      "body2": "Si no tiene código, pero tiene un resultado positivo a la prueba, tendrá que obtener un código de {{healthAuthorityName}} antes de continuar.",
-      "header": "¿Tiene el código de verificación?",
-      "what_is_a": "¿Qué es el código de verificación?"
+      "body1": "Si recibió un código de verificación de {{healthAuthorityName}} para una prueba positiva del COVID-19, puede enviar el código de verificación en la siguiente pantalla.",
+      "body2": "Si no tiene un código, pero tiene una prueba positiva, necesitará obtener un código de verificación de {{healthAuthorityName}} antes de continuar.",
+      "header": "¿Tiene su código de verificación?",
+      "what_is_a": "¿Qué es un código de verificación?"
     },
     "never_mind_button_title": "No importa",
     "person_and_health_expert": "Una persona hablando con personal médico",
@@ -153,11 +153,11 @@
     },
     "verification_code_info": {
       "contact_at": "También puede llamar al {{healthAuthorityName}} al",
-      "how_do_i_get_body": "Póngase en contacto con su autoridad de salud, {{healthAuthorityName}}",
-      "how_do_i_get_header": "¿Cómo obtengo el código de verificación?",
-      "info_body": "Un código de verificación es un código que le entrega su autoridad de salud {{healthAuthorityName}} cuando obtiene un resultado positivo a la prueba.\n\nEste código se utiliza para verificar que los resultados positivos de su prueba sean auténticos.\n\nCada código de verificación caduca después de un corto período de tiempo para asegurarnos de que no se presenten resultados de pruebas ya vencidos.\n\nSi encuentra un error al enviar su código de verificación, deberá obtener uno nuevo de la autoridad de salud antes de enviarlo otra vez.",
-      "info_header": "¿Qué es el código de verificación?",
-      "what_happens_body": "Cuando envíe su código de verificación, se le pedirá que confirme que la aplicación puede compartir de forma anónima con otras personas que pueden haber estado expuestas.\n\nSi da permiso, su dispositivo enviará códigos de exposición aleatorios para alertar de forma anónima a otros que estaban cerca de alguien que dio positivo por COVID-19. Esto permite que las personas expuestas actúen más rápidamente para encontrar un centro de pruebas y también proteger a quienes las rodean.",
+      "how_do_i_get_body": "Póngase en contacto con su autoridad médica, {{healthAuthorityName}}",
+      "how_do_i_get_header": "¿Cómo puedo obtener un código de verificación?",
+      "info_body": "Un código de verificación es un código que le da su autoridad médica, {{healthAuthorityName}} , si recibe un resultado positivo en la prueba.\n\nEl código de verificación se usa para verificar que el resultado positivo de su prueba sea auténtico.\n\nCada código de verificación caducará después de un breve período para garantizar que no se envíen los resultados de las pruebas obsoletas.\n\nSi encuentra un error al enviar su código de verificación, debe obtener un nuevo código de su autoridad médica antes de volver a enviarlo.",
+      "info_header": "¿Qué es un código de verificación?",
+      "what_happens_body": "Cuando envíe su código de verificación, se le pedirá que confirme que la aplicación puede compartir de forma anónima con otras personas que pueden haber estado expuestas.\n\nSi da permiso, su dispositivo enviará códigos de exposición aleatorios para alertar de forma anónima a otros que hayan podido estar en contacto con alguien que dió positivo al COVID-19. Esto permite que las personas expuestas actúen más rápidamente para encontrar un centro de pruebas y también proteger a quienes las rodean.",
       "what_happens_header": "¿Qué sucede cuando envío mi código?"
     }
   },
@@ -183,7 +183,7 @@
     "how_does_this_work": "¿Como funciona esto?",
     "how_does_this_work_para": "Cuando las Notificaciones de Exposición están activadas, su teléfono usará Bluetooth para intercambiar y guardar cadenas de carácteres aleatorios (llamadas identificaciones aleatorias) de aquellos teléfonos que tengan también las Notificaciones de Exposición activadas. Estas cadenas de caracteres aleatorios no le identificarán personalmente a los otros usuarios y varían muchas veces al día para proteger su privacidad. La fecha y duración de los encuentros serán grabados así como la distancia entre los dos teléfonos. Cuando una persona reporta un diagnóstico positivo, la cadena aleatoria de caracteres o random ID de su teléfono es marcada para anónimamente notificar al resto de usuarios. No se compartirá la información sobre su ubicación ni ninguna información personal.",
     "last_days": "Los últimos 14 días",
-    "more_info": "Conozca más acerca de las Notificaciones de Exposición",
+    "more_info": "Obtenga más información sobre las notificaciones de exposición",
     "next_steps": "Siguientes pasos",
     "no_connectivity_message": "¡No estás conectado a Internet!",
     "no_exposure_reports": "Ningún informe de exposición",
@@ -199,20 +199,20 @@
     "your_recommended_quarantine_is_over": "Su cuarentena recomendada ha terminado. Continúe siguiendo las pautas de salud."
   },
   "exposure_notification_alerts": {
-    "bluetooth_body": "Para activar las Notificaciones de Exposición, primero debe activar Bluetooth en su aplicación de Configuraciones.",
+    "bluetooth_body": "Para activar las Notificaciones de exposición, primero debe activar Bluetooth en su aplicación Configuración.",
     "bluetooth_title": "Habilitar el Bluetooth",
-    "cant_check_for_exposures_body": "Debe activar las Notificaciones de Exposición para buscar exposiciones.",
+    "cant_check_for_exposures_body": "Debe activar las Notificaciones de exposición para comprobar si hay exposiciones.",
     "cant_check_for_exposures_button": "Habilitar Notificaciones de Exposición",
-    "cant_check_for_exposures_title": "No pueden buscarse las Exposiciones.",
+    "cant_check_for_exposures_title": "No se puede comprobar si hay exposiciones",
     "location_body": "Google requiere que los dispositivos que ejecutan Android 10 o versiones anteriores tengan habilitados los servicios de ubicación para usar las notificaciones de exposición. {{applicationName}} NO rastrea ni mantiene un registro de su ubicación.",
     "location_title": "Active el servicio de ubicación",
-    "set_active_region_ios_body": "Abra la aplicación de Configuraciones y navegue hasta las configuraciones de Notificaciones de Exposición para esta aplicación y presione ‘Fijar como región activa’.",
-    "set_active_region_ios_title": "Fijar región activa",
-    "share_exposure_information_ios_body": "Abra la aplicación de Configuraciones y navegue hasta las configuraciones de Notificaciones de Exposición para esta aplicación. Asegúrese de activar ’Compartir Información de Exposición', presione 'Fijar como región activa'.",
+    "set_active_region_ios_body": "Abra la aplicación Configuración, navegue hasta la configuración de Notificaciones de exposición para esta aplicación, luego presione “Establecer como región activa”.",
+    "set_active_region_ios_title": "Establecer región activa",
+    "share_exposure_information_ios_body": "Abra la aplicación Configuración, luego navegue hasta la configuración de Notificaciones de exposición para esta aplicación. Asegúrese de que “Compartir información de exposición” esté activada, luego presione “Establecer como región activa”.",
     "share_exposure_information_ios_title": "Compartir información de exposición",
-    "unhandled_error_body": "Sucedió algo inesperado. Por favor, cierre la aplicación, ábrala de nuevo y vuelva a intentarlo.",
+    "unhandled_error_body": "Ocurrió algo inesperado. Cierre y vuelva a abrir la aplicación y vuelva a intentarlo.",
     "unhandled_error_title": "Algo salió mal",
-    "use_exposure_notifications_android_body": "Para activar las Notificaciones de Exposición, vaya a la pantalla de Notificaciones de Exposición al COVID-19 en la aplicación de Configuraciones y active ‘Usar Notificaciones de Exposición'.",
+    "use_exposure_notifications_android_body": "Para activar las Notificaciones de exposición, vaya a la pantalla de Notificaciones de exposición de COVID-19 en su aplicación Configuración y active la opción “Usar notificaciones de exposición”.",
     "use_exposure_notifications_android_title": "Habilitar Notificaciones de Exposición"
   },
   "exposure_scanning_status": {
@@ -240,6 +240,7 @@
     "check_if_your_symptoms": "Ingresar síntomas y obtener una recomendación instantánea sobre cómo estar a salvo.",
     "complete_healthcheck": "Completar Healthcheck",
     "could_not_open_link": "No se pudo abrir el vínculo: {{url}} . Intente abrir la URL en el navegador de su teléfono.",
+    "covid_data": "Datos de COVID",
     "enter_symptoms": "Ingrese síntomas",
     "error": {
       "share_link_failed": "No se pudo abrir el enlace para compartir"
@@ -259,9 +260,9 @@
     "verification_code_card": {
       "if_you_have_a_code": "Envíe su código de verificación para ayudar a mantener segura a su comunidad.",
       "if_you_have_a_positive_test": "Si el resultado de su prueba para COVID-19 fue positivo, puede informar sobre la prueba de forma anónima para ayudar a mantener segura a su comunidad.",
-      "more_info": "¿Qué es el código de verificación?",
+      "more_info": "¿Qué es un código de verificación?",
       "report_positive_test": "Informar sobre prueba positiva",
-      "submit_code": "Introduzca el código"
+      "submit_code": "Enviar código"
     }
   },
   "label": {
@@ -275,7 +276,7 @@
     "unchecked_checkbox": "Casilla de verificación no marcada"
   },
   "navigation": {
-    "exposure_history": "Historial de exposición",
+    "exposure_history": "Exposiciones",
     "home": "Panel",
     "settings": "Configuración",
     "symptom_history": "Comprobador de síntomas"
@@ -296,7 +297,7 @@
     "location_services_already_active": "Los servicios de ubicación están activos",
     "location_subheader": "¿Por qué necesito activar los servicios de ubicación de mi teléfono?",
     "no_take_me": "No, regresar a pantalla anterior",
-    "notification_body1": "Recibirá notificaciones cuando se haya cruzado con alguien que haya informado es positivo a COVID-19.",
+    "notification_body1": "Recibirá notificaciones cuando haya tenido contacto con alguien que haya informado que es positivo a COVID-19.",
     "notification_body2": "La aplicación hace esto usando Bluetooth de baja energía y códigos aleatorios seguros sin conocer quién es usted o dónde ha estado. Puede desactivar esto en cualquier momento en la configuración.",
     "notification_header": "Recibir notificación en caso de haber sido expuesto",
     "notification_subheader1": "¿Cuándo recibiré una notificación?",
@@ -340,7 +341,7 @@
     "terms_header_title": "Condiciones de uso",
     "verify_your_age": "Verifique su edad",
     "welcome_image_label": "Una ilustración de personas con mascarillas, conectadas como nodos en una red.",
-    "you_must_be": "Debe ser [1:minimumAge] o ser mayor de [1:minimumAge] para usar [2:applicationName.] ¿Eres mayor de [1:minimumAge?]"
+    "you_must_be": "Debe tener {{minimumAge}}  o ser mayor de  {{minimumAge}} para usar {{applicationName}}. ¿Eres mayor de {{minimumAge}}?"
   },
   "product_analytics": {
     "i_understand_and_consent": "Entiendo y doy mi consentimiento",
@@ -353,7 +354,8 @@
   },
   "screen_titles": {
     "bluetooth": "Bluetooth",
-    "exposure_history": "Historial de exposición",
+    "covid_data_webview": "Datos de COVID",
+    "exposure_history": "Exposiciones",
     "exposure_notifications": "Notificaciones de Exposición",
     "exposure_scanning": "Detección de exposición",
     "home": "Panel",
@@ -513,15 +515,15 @@
     "sore_throat": "Dolor de garganta"
   },
   "verification_code_alerts": {
-    "code_used_body": "El código de verificación introducido ya fue utilizado.",
-    "code_used_title": "Este código de verificación ya fue utilizado",
-    "invalid_code_body": "El código de verificación que envió es inválido.\n\nEl código de verificación debe ser un código válido emitido por su autoridad de salud.\n\nTambién es posible que el código haya caducado. De ser así, tendrá que solicitar un nuevo código a su autoridad de salud.",
-    "invalid_code_title": "Código inválido",
-    "network_connection_body": "Para enviar el código de verificación debe estar conectado a WiFi.",
+    "code_used_body": "El código de verificación dado ya se usó.",
+    "code_used_title": "Código de verificación ya usado",
+    "invalid_code_body": "El código de verificación que envió no es válido.\n\nEl código debe ser un código de verificación válido que le haya dado su autoridad médica.\n\nTambién es posible que su código haya caducado. Si es así, necesitará pedir un nuevo código a su autoridad médica.",
+    "invalid_code_title": "Código no válido",
+    "network_connection_body": "Necesita estar conectado a WiFi para enviar un código de verificación.",
     "network_connection_title": "No hay conexión a internet",
     "no_keys_on_device_body": "No tiene ninguna exposición que enviar. Continúe aislando.",
     "no_keys_on_device_title": "Sin exposiciones en el dispositivo",
-    "unknown_body": "Ocurrió un error inesperado. Por favor, intente de nuevo.",
+    "unknown_body": "Se produjo un error inesperado. Inténtelo de nuevo.",
     "unknown_title": "Algo salió mal"
   }
 }
