Handle 429 rate limit code
Why:
During the escrow verification code flow if the escrow server returns a
429 rate limit, we are only informing the user that 'something went
wrong'. We would like to explicitly let the user know they hit the rate
limit set by the server. Additionally we are treating 403's as rate
limits rather than 'Forbidden' as defined by the http status code spec.

This commit:
Adds the 429 code to the error handling flow and remaps a 403 to the
correct status.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -530,6 +530,8 @@
     "no_keys_on_device_title": "No exposures to share from device",
     "not_authorized_body": "You did not authorize the app to share your Random IDs.",
     "not_authorized_title": "Did not authorize",
+    "rate_limit_body": "You've reach the daily submission limit. Please try again in 24 hours.",
+    "rate_limit_title": "Max submissions reached",
     "unknown_body": "An unexpected error occurred. Please try again.",
     "unknown_title": "Something Went Wrong"
   }
