--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
   <string name="app_name" translatable="false">PathCheck BT</string>
   <string name="background_worker_channel_description">Indicates your device is checking for possible COVID-19 exposure.</string>
   <string name="background_worker_channel_name">Exposure Check</string>
-  <string name="background_worker_notification_title">Checking exposures…</string>
+  <string name="background_worker_notification_title_success">Exposure check successful</string>
+  <string name="background_worker_notification_title_failure">Exposure check unsuccessful</string>
   <string name="exposure_notification_channel_description">Exposure notification alerts.</string>
   <string name="exposure_notification_channel_name">Exposure Notification</string>
   <string name="exposure_notification_message">Someone you were near has tested positive for COVID-19. Tap for more info.</string>
