Update manual exposure detection alert.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -29,6 +29,7 @@
     "next": "Next",
     "no_thanks": "No thanks",
     "off": "OFF",
+    "ok": "Ok",
     "okay": "Okay",
     "on": "ON",
     "save": "Save",
@@ -205,6 +206,7 @@
     "cant_check_for_exposures_body": "You must enable Exposure Notifications to check for exposures.",
     "cant_check_for_exposures_button": "Enable Exposure Notifications",
     "cant_check_for_exposures_title": "Can't Check for Exposures",
+    "exposure_check_complete": "Exposure check complete",
     "location_body": "Google requires that devices running Android 10 or below have location services enabled to use Exposure Notifications. {{applicationName}} does NOT track or keep a record of your location.",
     "location_title": "Enable Location Services",
     "set_active_region_ios_body": "Open the Settings app, navigate to the Exposure Notifications settings for this app, then press 'Set As Active Region'.",
