--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -126,6 +126,7 @@
       "body1": "If you have received a verification code from {{healthAuthorityName}} for a positive COVID-19 test, you can submit the verification code on the following screen.",
       "body2": "If you do not have a code, but you do have a positive test, you will need to get a verification code from {{healthAuthorityName}} before continuing.",
       "header": "Do you have your verification code?",
+      "title": "Verification Code Info",
       "what_is_a": "What is a verification code?"
     },
     "never_mind_button_title": "Never mind",
@@ -373,7 +374,12 @@
     "protect_privacy": "How we protect your privacy",
     "select_language": "Select Language",
     "select_symptoms": "Select Symptoms",
-    "settings": "Settings"
+    "settings": "Settings",
+    "my_data": "My Data",
+    "request_callback": "Request Callback",
+    "welcome": "Welcome",
+    "activation": "Activation",
+    "self_assessment": "Self Assessment"
   },
   "self_assessment": {
     "age_range": {
