--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -210,6 +210,8 @@
     "exposure_check_complete": "Exposure check complete",
     "location_body": "Google requires that devices running Android 10 or below have location services enabled to use Exposure Notifications. {{applicationName}} does NOT track or keep a record of your location.",
     "location_title": "Enable Location Services",
+    "requires_network_body": "Please disable airplane mode and enable mobile data or wifi.",
+    "requires_network_title": "Can't Connect To Network",
     "set_active_region_ios_body": "Open the Settings app, navigate to the Exposure Notifications settings for this app, then press 'Set As Active Region'.",
     "set_active_region_ios_title": "Set Active Region",
     "share_exposure_information_ios_body": "Open the Settings app, then navigate to the Exposure Notifications settings for this app. Ensure 'Share Exposure Information' is turned on, then press 'Set As Active Region'.",
