Added button to skip inputting phone number for UAB

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -23,6 +23,7 @@
     "continue": "Continue",
     "done": "Done",
     "edit": "Edit",
+    "hascode": "Already have a code? ",
     "learn_more": "Learn more",
     "maybe_later": "Maybe later",
     "more": "More",
