--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -127,6 +127,7 @@
       "body2": "If you do not have a code, but you do have a positive test, you will need to get a verification code from {{healthAuthorityName}} before continuing.",
       "header": "Do you have your verification code?",
       "title": "Verification Code Info",
+      "do_you_have_a_verification_code": "Do you have your verification code?",
       "what_is_a": "What is a verification code?"
     },
     "never_mind_button_title": "Never mind",
