# This is a combination of 4 commits. # This is the 1st commit message:
GAEN-645, stop users from blasting the callback form over and over again.

# This is the commit message #2:

Removed space typo in common.hascode
# This is the commit message #3:

Removed need to save phone number in local storage and replaced with count instead

# This is the commit message #4:

Removed need to save phone number in local storage and replaced with count instead

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -23,7 +23,7 @@
     "continue": "Continue",
     "done": "Done",
     "edit": "Edit",
-    "hascode": "Already have a code? ",
+    "hascode": "Already have a code?",
     "learn_more": "Learn more",
     "maybe_later": "Maybe later",
     "more": "More",
@@ -72,6 +72,7 @@
   },
   "errors": {
     "description": "An error has occurred. Please reload the app.",
+    "maxed_submission_requests": "You have reached the max number of submissions, please wait 15 minutes to resubmit.",
     "reload": "Reload",
     "something_went_wrong": "Something went wrong",
     "title": "Unknown Error",
