Added link to FAQ website on home screen if VERIFICATION_CODE_INFO_URL.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -270,7 +270,8 @@
       "more_info": "What is a verification code?",
       "report_positive_test": "Report Positive Test",
       "submit_code": "Submit code"
-    }
+    },
+    "view_faq": "View FAQ"
   },
   "label": {
     "checked_checkbox": "Checked checkbox",
